<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayContact">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleTambahData"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/TVnama"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tikdua" />
            </TableRow>

                <EditText
                    android:id="@+id/ETnama"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/TVnoTelp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/noTelp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tikdua" />
                </TableRow>

                <EditText
                    android:id="@+id/ETnoTelp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number|phone"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/TVmail"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tikdua" />
                </TableRow>

                <EditText
                    android:id="@+id/ETemail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/TValamat"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tikdua" />
                </TableRow>

                <EditText
                    android:id="@+id/ETalamat"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

            </TableRow>



        </TableLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="run"
            android:text="@string/save" />

    </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
